# vmb-rs

./: .gitignore  .taplo.toml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  _typos.toml  clippy.toml  deny.toml  mutants-bench.config  rustfmt.toml
.cargo/: mutants.toml
.github/workflows/: ci.yml  release.yml
scripts/: mutants-bench.expected  mutants-bench.sh
vmb/: Cargo.toml  README.md
vmb-core/: Cargo.toml  README.md
vmb-core/src/: callback.rs  camera.rs  discovery.rs  error.rs  frame.rs  lib.rs  port.rs  system.rs  types.rs
vmb-core/tests/: camera.rs  discovery.rs  system.rs
vmb-fake/: Cargo.toml  README.md
vmb-fake/src/: lib.rs
vmb-fake/tests/: pre_open_camera.rs
vmb-ffi/: Cargo.toml  README.md
vmb-ffi/src/: lib.rs  runtime.rs  state.rs  trampoline.rs  util.rs
vmb-ffi/tests/: mocked_runtime.rs
vmb-sys/: Cargo.toml  README.md  build.rs  wrapper.h
vmb-sys/src/: api.rs  bindings.rs  lib.rs  stubs.rs
vmb/src/: callback.rs  camera.rs  discovery.rs  error.rs  frame.rs  lib.rs  system.rs
vmb/tests/: error_drift.rs
