[workspace]
resolver = "2"
members = ["vmb-sys", "vmb"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/GoCleverOrg/vmb-rs"
authors = ["GoClever <opensource@goclever.com>"]
rust-version = "1.84"

[workspace.dependencies]
thiserror = "1.0"
tracing = "0.1"
