[package]
authors.workspace = true
categories = ["api-bindings", "hardware-support"]
description = "Runtime-agnostic domain types and ports for vmb-rs (no FFI dependency)"
edition.workspace = true
keywords = ["vimba", "allied-vision", "camera", "vision", "ports-and-adapters"]
license.workspace = true
name = "vmb-core"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
# Path-only on purpose: a versioned dev-dep would force publish-time
# resolution of `vmb-fake` from crates.io, but `vmb-fake` itself
# depends on `vmb-core` — that's a cycle in the publish-time graph
# that cargo cannot satisfy. Path-only dev-deps are stripped from the
# packaged crate and only used for in-workspace `cargo test`.
vmb-fake = { path = "../vmb-fake" }
