[package]
authors.workspace = true
categories = ["api-bindings", "external-ffi-bindings", "hardware-support"]
description = "FFI adapter implementing the vmb-core VmbRuntime port against libVmbC, loaded at runtime"
edition.workspace = true
keywords = ["vimba", "allied-vision", "camera", "ffi", "adapter"]
license.workspace = true
name = "vmb-ffi"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
tracing = { workspace = true }
vmb-core = { version = "0.3.0", path = "../vmb-core" }
vmb-sys = { version = "0.3.0", path = "../vmb-sys" }
