[package]
name = "vmb-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Raw FFI bindings to Allied Vision VmbC (Vimba X) C API, loaded at runtime via libloading"
readme = "README.md"
keywords = ["vimba", "allied-vision", "camera", "ffi", "bindgen"]
categories = ["external-ffi-bindings", "api-bindings", "hardware-support"]

[dependencies]
libloading = "0.9"
thiserror = { workspace = true }
