[package]
name = "vmb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Safe Rust wrapper around Allied Vision Vimba X (VmbC)"
readme = "README.md"
keywords = ["vimba", "allied-vision", "camera", "vision", "sdk"]
categories = ["api-bindings", "hardware-support", "multimedia::images"]

[features]
default = []
# Enables the real Vimba SDK backend via `vmb-sys/sdk`. When off, the crate
# exposes a minimal stub so `cargo build` succeeds without the SDK installed.
sdk = ["vmb-sys/sdk"]

[dependencies]
vmb-sys = { version = "0.1.0", path = "../vmb-sys" }
thiserror = { workspace = true }
tracing = { workspace = true }
