[package]
authors.workspace = true
categories = ["api-bindings", "hardware-support", "multimedia::images"]
description = "Safe Rust wrapper around Allied Vision Vimba X (VmbC)"
edition.workspace = true
keywords = ["vimba", "allied-vision", "camera", "vision", "sdk"]
license.workspace = true
name = "vmb"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
# Enables the real Vimba SDK backend via `vmb-ffi/sdk`. When off, only
# the domain layer (error, frame, types) is exposed and `cargo build`
# succeeds without the SDK installed.
sdk = ["dep:vmb-ffi", "vmb-ffi/sdk"]

[dependencies]
vmb-core = { version = "0.2.1", path = "../vmb-core" }
vmb-ffi = { version = "0.2.1", path = "../vmb-ffi", optional = true }

[dev-dependencies]
# Path-only: only used by the `error_drift` integration test which
# accesses bindgen types from vmb-sys for the cross-crate naming
# audit. Versioned would force publish-order resolution unnecessarily.
vmb-sys = { path = "../vmb-sys" }
