[package]
authors.workspace = true
categories = ["api-bindings", "hardware-support", "multimedia::images"]
description = "Safe Rust wrapper around Allied Vision Vimba X (VmbC)"
edition.workspace = true
keywords = ["vimba", "allied-vision", "camera", "vision", "sdk"]
license.workspace = true
name = "vmb"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
vmb-core = { version = "0.3.0", path = "../vmb-core" }
vmb-ffi = { version = "0.3.0", path = "../vmb-ffi" }

[dev-dependencies]
# Path-only: only used by the `error_drift` integration test which
# accesses bindgen types from vmb-sys for the cross-crate naming
# audit. Versioned would force publish-order resolution unnecessarily.
vmb-sys = { path = "../vmb-sys" }
